localization/v2.4.x/site/ja/home/home.md
---
id: home.md
---
<div class="doc-h1-wrapper">
<p><h1 class="title">
Milvusドキュメントへようこそ！</h1></p>
<p><h2 class="sub-title">
ここでは、Milvusとは何か、Milvusをどのようにインストールし、どのように使用し、どのようにデプロイし、どのようにビジネスニーズに合ったアプリケーションを構築するかについて学びます。</h2></p>
</div>
<div class="doc-home-promotion-wrapper">
  <div class="promotion-content">
    <h2 class="promotion-title">マネージドMilvusを無料でお試しください！</h2>
    <p class="promotion-desc">Zilliz Cloudを無料でお試しください！Milvusを体験する最も簡単な方法です！</p>
  </div>
  <div class="cta-wrapper">
   <a class="cta-global" href="https://cloud.zilliz.com/signup">Zilliz Cloud</a> <a class="cta-cn" href="https://cloud.zilliz.com.cn/signup">Zilliz Cloud 中国</a></div>
</div>
<h2 id="Get-Started" class="common-anchor-header">始める<button data-href="#Get-Started" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><div class="card-wrapper">
<div class="start_card_container">
  
   <a href="/docs/ja/v2.4.x/install_standalone-docker.md"> <img translate="no" src="https://milvus-docs.s3.us-west-2.amazonaws.com/assets/home_install.svg" alt="icon" />
   </a> <a href="/docs/ja/v2.4.x/install_standalone-docker.md"> <p class="link-btn">Milvusのインストール</p> </a><p>Docker ComposeまたはKubernetesを使ってMilvusをインストールする方法をご紹介します。</p>
</div>
<div class="start_card_container">
  
   <a href="/docs/ja/v2.4.x/quickstart.md"> <img translate="no" src="https://milvus-docs.s3.us-west-2.amazonaws.com/assets/home_quick_start.svg" alt="icon" />
   </a> <a href="/docs/ja/v2.4.x/quickstart.md"> <p class="link-btn">クイックスタート</p> </a><p>サンプルコードを使ってMilvusを素早く実行する方法をご紹介します。</p>
</div>
<div class="start_card_container">
  
   <a href="/bootcamp"> <img translate="no" src="https://milvus-docs.s3.us-west-2.amazonaws.com/assets/home_bootcamp.svg" alt="icon" />
   </a> <a href="/bootcamp"> <p class="link-btn">ブートキャンプ</p> </a><p>
  Milvusでベクトル類似検索アプリケーションを構築する方法を学びます。  </p>
</div>
</div>
<h2 id="Recommended-articles" class="common-anchor-header">おすすめ記事<button data-href="#Recommended-articles" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><div class="doc-home-recommend-section">
<div class="recomment-item">
  <p>使用方法</p>
<ul>
<li><a href="/docs/ja/v2.4.x/manage-collections.md">コレクションの管理</a></li>
<li><a href="/docs/ja/v2.4.x/insert-update-delete.md">挿入、アップサート、削除</a></li>
<li><a href="/docs/ja/v2.4.x/index-vector-fields.md">インデックス・ベクトル・フィールド</a></li>
<li><a href="/docs/ja/v2.4.x/single-vector-search.md">単一ベクトル検索</a></li>
<li><a href="/docs/ja/v2.4.x/get-and-scalar-query.md">取得とスカラークエリー</a></li>
</ul>
</div>
<div class="recomment-item">
  <p>デプロイ</p>
<ul>
<li><a href="/docs/ja/v2.4.x/configure-docker.md">Milvusの設定</a></li>
<li><a href="/docs/ja/v2.4.x/deploy_s3.md">依存関係の管理</a></li>
<li><a href="/docs/ja/v2.4.x/eks.md">クラウドへのデプロイ</a></li>
<li><a href="/docs/ja/v2.4.x/scaleout.md">Milvusクラスターのスケール</a></li>
<li><a href="/docs/ja/v2.4.x/monitor_overview.md">監視とアラート</a></li>
</ul>
</div>
<div class="recomment-item">
  <p>学ぶ</p>
<ul>
<li><a href="/docs/ja/v2.4.x/system_configuration.md">システム構成</a></li>
<li><a href="/docs/ja/v2.4.x/architecture_overview.md">アーキテクチャの概要</a></li>
<li><a href="/docs/ja/v2.4.x/index.md">ベクトルインデックス</a></li>
<li><a href="/docs/ja/v2.4.x/metric.md">類似性メトリクス</a></li>
<li><a href="/docs/ja/v2.4.x/glossary.md">用語集</a></li>
</ul>
</div>
</div>
<div class="doc-home-what-is-new">
<h2 id="Whats-new-in-docs" class="common-anchor-header">新着情報<button data-href="#Whats-new-in-docs" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><p><em>2024年3月 - Milvus 2.4.0リリース</em></p>
<ul>
<li><a href="/docs/ja/v2.4.x/multi-vector-search.md">ハイブリッド検索</a>方法のガイダンスを追加しました。</li>
<li><a href="/docs/ja/v2.4.x/gpu_index.md">GPUインデックスの</a>説明を追加。</li>
<li><a href="/docs/ja/v2.4.x/embeddings.md">PyMilvusを使ってデータを埋め込む</a>方法のガイダンスを追加。</li>
<li><a href="/docs/ja/v2.4.x/milvus-cdc-overview.md">Milvus CDCの</a>説明を追加。</li>
</ul>
</div>
