localization/v3.0.x/site/ja/home/home.md
---
id: home.md
---
<div class="doc-h1-wrapper">
<p><h1 class="title">
Milvusドキュメントへようこそ！</h1></p>
<p><h2 class="sub-title">
ここでは、Milvusとは何か、Milvusをどのようにインストールし、どのように使用し、どのようにデプロイし、どのようにビジネスニーズに合ったアプリケーションを構築するかについて学びます。</h2></p>
</div>
<div class="doc-home-promotion-wrapper">
  <div class="promotion-content">
    <h2 class="promotion-title">マネージドMilvusを無料でお試しください！</h2>
    <p class="promotion-desc">Zillizクラウドは手間がかからず、Milvusを搭載し、10倍高速です。</p>
  </div>
  <div class="cta-wrapper">
   <a class="cta-global" href="https://cloud.zilliz.com/signup?utm_source=partner&utm_medium=referral&utm_campaign=2025-02-24_doc_home_milvus.io">Zillizクラウド</a></div>
</div>
<h2 id="Get-Started" class="common-anchor-header">始める<button data-href="#Get-Started" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><div class="card-wrapper">
<div class="start_card_container">
  
   <a href="/docs/ja/install_standalone-docker.md"> <img translate="no" src="https://milvus-docs.s3.us-west-2.amazonaws.com/assets/home_install.svg" alt="icon" />
   </a> <a href="/docs/ja/install_standalone-docker.md"> <p class="link-btn">Milvusのインストール</p> </a><p>Docker ComposeまたはKubernetesを使用してMilvusをインストールする方法をご紹介します。</p>
</div>
<div class="start_card_container">
  
   <a href="/docs/ja/quickstart.md"> <img translate="no" src="https://milvus-docs.s3.us-west-2.amazonaws.com/assets/home_quick_start.svg" alt="icon" />
   </a> <a href="/docs/ja/quickstart.md"> <p class="link-btn">クイックスタート</p> </a><p>サンプルコードを使ってMilvusを素早く実行する方法をご紹介します。</p>
</div>
<div class="start_card_container">
  
   <a href="/bootcamp"> <img translate="no" src="https://milvus-docs.s3.us-west-2.amazonaws.com/assets/home_bootcamp.svg" alt="icon" />
   </a> <a href="/bootcamp"> <p class="link-btn">ブートキャンプ</p> </a><p>
  Milvusでベクトル類似検索アプリケーションを構築する方法を学びます。  </p>
</div>
</div>
<h2 id="Recommended-articles" class="common-anchor-header">おすすめ記事<button data-href="#Recommended-articles" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><div class="doc-home-recommend-section">
<div class="recomment-item">
  <p>使用方法</p>
<ul>
<li><a href="/docs/ja/manage-collections.md">コレクションの管理</a></li>
<li><a href="/docs/ja/insert-update-delete.md">挿入、アップサート、削除</a></li>
<li><a href="/docs/ja/single-vector-search.md">単一ベクトル検索</a></li>
<li><a href="/docs/ja/multi-vector-search.md">ハイブリッド検索</a></li>
<li><a href="/docs/ja/get-and-scalar-query.md">取得とスカラークエリ</a></li>
<li><a href="/docs/ja/milvus_for_agents.md">AIエージェントのためのMilvus</a></li>
</ul>
</div>
<div class="recomment-item">
  <p>デプロイ</p>
<ul>
<li><a href="/docs/ja/configure-docker.md">Milvusの設定</a></li>
<li><a href="/docs/ja/deploy_s3.md">依存関係の管理</a></li>
<li><a href="/docs/ja/eks.md">クラウドへのデプロイ</a></li>
<li><a href="/docs/ja/scaleout.md">Milvusクラスターのスケール</a></li>
<li><a href="/docs/ja/monitor_overview.md">監視とアラート</a></li>
</ul>
</div>
<div class="recomment-item">
  <p>学ぶ</p>
<ul>
<li><a href="/docs/ja/system_configuration.md">システム構成</a></li>
<li><a href="/docs/ja/architecture_overview.md">アーキテクチャの概要</a></li>
<li><a href="/docs/ja/index-explained.md">インデックスの説明</a></li>
<li><a href="/docs/ja/metric.md">類似性メトリクス</a></li>
<li><a href="/docs/ja/glossary.md">用語集</a></li>
</ul>
</div>
</div>
<div class="doc-home-what-is-new">
<h2 id="Whats-new-in-docs" class="common-anchor-header">新着情報<button data-href="#Whats-new-in-docs" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><p><em>2026年5月 - Milvus 3.0.xアップデート</em></p>
<ul>
<li><a href="/docs/ja/release_notes.md">リリースノートに</a>Milvus 3.0.xのハイライト（外部コレクション、スナップショット、ストレージV3、レイクエコシステムの統合など）を追加しました。</li>
<li><a href="/docs/ja/single-vector-search.md#Sort-Search-Results-by-Scalar-Fields--Milvus-30x">スカラーフィールドによる検索結果の並べ替えおよび</a> <a href="/docs/ja/get-and-scalar-query.md#Aggregate-Query-Results--Milvus-30x">クエリ結果の集約</a>方法に関するガイダンスを追加しました。</li>
<li><a href="/docs/ja/nullable-and-default.md">NULL可能なベクトル・フィールドと</a> <a href="/docs/ja/set-collection-ttl.md#Set-entity-level-TTL--Milvus-30x">エンティティ・レベルTTLの</a>使用方法に関するガイダンスを追加しました。</li>
<li>サーバー側のMinHash署名に<a href="/docs/ja/minhash-function.md">MinHash関数を</a>使用する方法に関するガイダンスを追加しました。</li>
<li><a href="/docs/ja/search-with-embedding-lists.md">埋め込みリストを使用した検索と</a> <a href="/docs/ja/force-merge.md">強制マージ圧縮の</a>トリガー方法に関するガイダンスを追加しました。</li>
</ul>
</div>
